# Oraculo

./: .gitignore  .stylelintrc.json  Anchor.toml  README.md  VISIBILIDAD_PUBLICA_MERCADOS.md  age.circom  age.r1cs  age.sym  age_0000.zkey  age_0001.zkey  batch_age.circom  batch_age.r1cs  batch_age.sym  batch_age_0000.zkey  batch_age_0001.zkey  clear-demo-markets.js  create-market-test.js  env.example  final-market-test.js  oracle-market-test.js  package.json  pot12_0001.ptau  quick-start.sh  simple-market-test.js  start-real-markets.sh  test-date-formatting.js  test-identity-console.js  test-identity-simple.js  test-market-resolution.js  test-markets-display.js  test-november-2025-dates.js  test-oracle-client.js  test-public-markets.js  test-zk-compression.js  test-zk-proof.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  verify-market-creation.js
age_js/: age.wasm
batch_age_js/: batch_age.wasm
frontend/: .csslintrc.js  .csslintrc.yaml  .vercelignore  README.md  env.example.txt  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  test-neural-styles.html  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page-backup.tsx  page.tsx
frontend/components/: CreateMarketForm.tsx  CypherpunkImplementation.tsx  CypherpunkManifesto.tsx  CypherpunkRoadmap.tsx  CypherpunkStats.tsx  DemoMarketCreator.tsx  EricHughesManifesto.tsx  Footer.tsx  HydrationBoundary.tsx  IdentityZK.tsx  Layout.tsx  MarketNotification.tsx  MarketResolutionInfo.tsx  MarketTemplates.tsx  MarketTemplatesMexico.tsx  MatrixBackground.tsx  OracleDemo.tsx  PublicVisibilityNotice.tsx  RealMarketCreator.tsx  RealMarketList.tsx  ResponsiveContainer.tsx  ResponsiveGrid.tsx  ResponsiveLayout.tsx  ResponsiveSidebar.tsx  TestZKIdentity.tsx  WalletButton.tsx  WalletStatus.tsx  WindowCleanup.tsx  ZKCompression.tsx  create-market-form-simple.tsx  (+20 more)
onchain/: Anchor.toml  test_simple.js
programs/cpi-messenger/: Cargo.toml
programs/cpi-messenger/src/: lib.rs
programs/oracle-privacy/: Cargo.toml
programs/oracle-privacy-native/: Cargo.toml
programs/oracle-privacy-native/examples/: client.rs
programs/oracle-privacy-native/src/: lib.rs
programs/oracle-privacy/src/: lib.rs
programs/pda-messenger/: Cargo.toml
programs/pda-messenger/src/: lib.rs
src/: oracle-client.ts  tsconfig.json  tsconfig.tsbuildinfo
src/rust-programs/hello_world/: Cargo.toml
src/rust-programs/hello_world/examples/: client.rs
src/rust-programs/hello_world/src/: lib.rs
src/rust-programs/oraculo_prediction_market/: Cargo.toml
src/rust-programs/oraculo_prediction_market/benches/: compute_units.rs
src/rust-programs/oraculo_prediction_market/src/: lib.rs
src/rust-programs/oraculo_prediction_market/tests/: integration_tests.rs
src/rust-programs/oraculo_token_integration/: Cargo.toml
src/rust-programs/oraculo_token_integration/benches/: basic_benchmarks.rs  simple_token_benchmarks.rs  token_benchmarks.rs
src/rust-programs/oraculo_token_integration/examples/: advanced_rpc_example.rs  client_example.rs  migration-example.rs  rpc_methods_example.rs
src/rust-programs/oraculo_token_integration/src/: client.rs  lib.rs
src/rust-programs/oraculo_token_integration/tests/: token_integration_tests.rs
tests/: cpi-messenger.test.ts  hello-anchor.test.ts  oracle_privacy.ts  pda-messenger.test.ts
(+65 files in other folders)
