[package]
name = "cpi-messenger"
version = "0.1.0"
description = "CPI Messenger Program with Cross Program Invocations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_messenger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
