[package]
name = "oracle-privacy-native"
version = "0.1.0"
description = "OráculoS - Native Rust Prediction Markets on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle_privacy_native"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = "1.5.7"
solana-program = "~2.2.0"

[dev-dependencies]
litesvm = "0.6.1"
solana-sdk = "2.2.0"
solana-client = "2.2.0"
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "client"
path = "examples/client.rs"
