[package]
name = "oracle-privacy"
version = "0.1.0"
description = "OráculoS - Private Prediction Markets on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle_privacy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
