[package]
name = "oraculo_prediction_market"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.2.0"
borsh = "1.0"
borsh-derive = "1.0"

[dev-dependencies]
mollusk-svm = "0.7"
mollusk-svm-bencher = "0.7"
mollusk-svm-programs-token = "0.7"
solana-sdk = "2.2.0"
solana-client = "2.2.0"
tokio = { version = "1.0", features = ["full"] }
